--- a/.github/workflows/python-scripts.yml
+++ b/.github/workflows/python-scripts.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install beautifulsoup4 html5lib htmlmin
+        pip install beautifulsoup4 html5lib htmlmin requests
 
     - name: Run add_html_extension.py
       run: python scripts/add_html_extension.py
