--- a/.github/workflows/update-production.yml
+++ b/.github/workflows/update-production.yml
@@ -10,80 +10,124 @@ on:
       - '**.html'
       - 'scripts/**'
       - '.github/workflows/**'
+      - 'package.json'
+      - 'package-lock.json'
 
 jobs:
   update-production:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout development branch
-      uses: actions/checkout@v2
-      with:
-        ref: development
-        fetch-depth: 0
+      - name: Checkout development branch
+        uses: actions/checkout@v4
+        with:
+          ref: development
+          fetch-depth: 0
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+          cache: 'pip'
 
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install beautifulsoup4 requests
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install beautifulsoup4 requests
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
 
-    - name: Install Node.js dependencies
-      run: |
-        npm install -g terser clean-css-cli html-minifier
-        npm ci
+      - name: Install Node.js dependencies
+        run: |
+          # Install global minification tools
+          npm install -g terser clean-css-cli html-minifier
+          
+          # Check if package.json exists
+          if [ -f "package.json" ]; then
+            # If package-lock.json exists, use npm ci
+            if [ -f "package-lock.json" ]; then
+              npm ci
+            else
+              # Otherwise, use npm install and generate package-lock.json
+              npm install
+            fi
+          fi
 
-    - name: Run minification
-      run: |
-        echo "Starting minification process..."
-        python scripts/minify.py
-        if [ $? -ne 0 ]; then
-          echo "Minification failed"
-          exit 1
-        fi
-        echo "Minification completed successfully"
+      - name: Run minification
+        run: |
+          echo "Starting minification process..."
+          
+          # Create dist directory if it doesn't exist
+          mkdir -p dist
+          
+          # Minify JavaScript files
+          find . -type f -name "*.js" ! -path "./node_modules/*" ! -path "./dist/*" -exec bash -c '
+            mkdir -p dist/$(dirname "{}")
+            terser "{}" -o "dist/{}" -c -m
+          ' \;
+          
+          # Minify CSS files
+          find . -type f -name "*.css" ! -path "./node_modules/*" ! -path "./dist/*" -exec bash -c '
+            mkdir -p dist/$(dirname "{}")
+            cleancss -o "dist/{}" "{}"
+          ' \;
+          
+          # Minify HTML files
+          find . -type f -name "*.html" ! -path "./node_modules/*" ! -path "./dist/*" -exec bash -c '
+            mkdir -p dist/$(dirname "{}")
+            html-minifier --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --minify-css true --minify-js true "{}" -o "dist/{}"
+          ' \;
+          
+          echo "Minification completed successfully"
 
-    - name: Set up Git
-      run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+      - name: Set up Git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-    - name: Create or update production branch
-      env:
-        GH_PAT: ${{ secrets.GH_PAT }}
-      run: |
-        # Stage all changes
-        git add -A
-        
-        # Check if there are any changes to commit
-        if git diff --staged --quiet; then
-          echo "No changes to commit"
-          exit 0
-        fi
-        
-        # Commit minified changes
-        git commit -m "Minify assets for production
-        
-        - Minified JS files
-        - Minified CSS files
-        - Minified HTML files
-        - Updated on: $(date -u)"
-        
-        # Create/switch to production branch
-        git checkout -B production
-        
-        # Remove development-only files
-        git rm -r --cached .github scripts || true
-        git commit -m "Clean up development files from production branch"
-        
-        # Force push to production (with lease for safety)
-        git push --force-with-lease https://x-access-token:${GH_PAT}@github.com/${GITHUB_REPOSITORY}.git production
+      - name: Create or update production branch
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+        run: |
+          # Create and switch to production branch
+          git checkout -B production
+          
+          # Copy minified files from dist to their original locations
+          if [ -d "dist" ]; then
+            cp -r dist/* .
+            rm -rf dist
+          fi
+          
+          # Remove development-only files and directories
+          git rm -r --cached .github scripts || true
+          rm -rf .github scripts
+          
+          # Stage all changes
+          git add -A
+          
+          # Check if there are any changes to commit
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+            exit 0
+          fi
+          
+          # Commit minified changes
+          git commit -m "Minify assets for production
+          
+          - Minified JS files
+          - Minified CSS files
+          - Minified HTML files
+          - Updated on: $(date -u)"
+          
+          # Force push to production (with lease for safety)
+          git push --force-with-lease https://x-access-token:${GH_PAT}@github.com/${GITHUB_REPOSITORY}.git production
+
+      - name: Cleanup
+        if: always()
+        run: |
+          rm -rf dist
+          git checkout development
