--- a/.github/workflows/update-production.yml
+++ b/.github/workflows/update-production.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Inline critical CSS/JS and defer non-critical scripts
         run: |
           # Inline critical CSS/JS and defer non-critical scripts
-          python inline_critical_css_js.py
+          python scripts/inline_critical_css_js.py
 
       - name: Set up Git
         run: |
