Update GitHub Actions workflow to fetch latest changes before switching to production branch

--- a/.github/workflows/update-production.yml
+++ b/.github/workflows/update-production.yml
@@ -82,8 +82,11 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
+          # Fetch the latest changes from the remote repository
+          git fetch origin production
+          
           # Create and switch to production branch
-          git checkout -B production
+          git checkout -B production origin/production
           
           # Copy minified files from dist to their original locations
           if [ -d "dist" ]; then
