--- a/.github/workflows/update-production.yml
+++ b/.github/workflows/update-production.yml
@@ -82,11 +82,17 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
+          # Stash local changes
+          git stash --include-untracked
+          
           # Fetch the latest changes from the remote repository
           git fetch origin production
           
           # Create and switch to production branch
           git checkout -B production origin/production
+          
+          # Apply stashed changes
+          git stash pop
           
           # Copy minified files from dist to their original locations
           if [ -d "dist" ]; then
