--- a/.github/workflows/update-production.yml
+++ b/.github/workflows/update-production.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install beautifulsoup4 requests cssselect tinycss
+          pip install beautifulsoup4 requests
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
@@ -40,9 +40,6 @@ jobs:
       - name: Install minification tools
         run: |
           npm install -g terser clean-css-cli html-minifier
-
-      - name: Run performance optimizations
-        run: python scripts/optimize_performance.py
 
       - name: Run minification
         run: |
@@ -70,6 +67,7 @@ jobs:
               "{}" -o "dist/{}"
           ' \;
 
+
       - name: Set up Git
         run: |
           git config --global user.name "github-actions[bot]"
@@ -85,7 +83,7 @@ jobs:
           
           # Stage all changes
           git add -A
-          git commit -m "Apply performance optimizations and minify assets"
+          git commit -m "Minify assets and update production branch"
           
           # Switch to production branch
           git checkout -B production
