--- a/.github/workflows/update-production.yml
+++ b/.github/workflows/update-production.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install beautifulsoup4 requests
+          pip install beautifulsoup4 requests cssmin jsmin htmlmin
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
@@ -41,24 +41,28 @@ jobs:
         run: |
           npm install -g terser clean-css-cli html-minifier
 
+      - name: Run optimization script
+        run: |
+          python scripts/optimized-deployment.py
+
       - name: Run minification
         run: |
-          # Create dist directory
+          # Create dist directory if it doesn't exist
           mkdir -p dist
           
-          # Minify JavaScript files
+          # Minify any remaining JavaScript files not handled by optimization
           find . -type f -name "*.js" ! -path "./node_modules/*" ! -path "./dist/*" -exec bash -c '
             mkdir -p dist/$(dirname "{}")
             terser "{}" -o "dist/{}" -c -m
           ' \;
           
-          # Minify CSS files
+          # Minify any remaining CSS files not handled by optimization
           find . -type f -name "*.css" ! -path "./node_modules/*" ! -path "./dist/*" -exec bash -c '
             mkdir -p dist/$(dirname "{}")
             cleancss -o "dist/{}" "{}"
           ' \;
           
-          # Minify HTML files
+          # Minify any remaining HTML files not handled by optimization
           find . -type f -name "*.html" ! -path "./node_modules/*" ! -path "./dist/*" -exec bash -c '
             mkdir -p dist/$(dirname "{}")
             html-minifier --collapse-whitespace --remove-comments --remove-optional-tags \
@@ -66,7 +70,6 @@ jobs:
               --remove-tag-whitespace --use-short-doctype --minify-css true --minify-js true \
               "{}" -o "dist/{}"
           ' \;
-
 
       - name: Set up Git
         run: |
@@ -77,13 +80,13 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          # Copy minified files from dist to their original locations
+          # Copy optimized and minified files from dist to their original locations
           cp -r dist/* .
           rm -rf dist
           
           # Stage all changes
           git add -A
-          git commit -m "Minify assets and update production branch"
+          git commit -m "Apply optimization and minification"
           
           # Switch to production branch
           git checkout -B production
