--- a/.github/workflows/update-production.yml
+++ b/.github/workflows/update-production.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           python scripts/minify.py
 
-      - name: Set up Git
+      - name: Set up Gits
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
