--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,51 @@
 {
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "images": {
+    "sizes": [256, 640, 1080, 1600, 2000],
+    "formats": ["image/webp"],
+    "minimumCacheTTL": 31536000,
+    "contentSecurityPolicy": "script-src 'none'; frame-src 'none'; sandbox;",
+    "contentDispositionType": "inline"
+  },
+  "outputDirectory": ".",
+  "redirects": [
+    {
+      "source": "/work.html",
+      "destination": "/work",
+      "permanent": true
+    },
+    {
+      "source": "/about.html",
+      "destination": "/about",
+      "permanent": true
+    },
+    {
+      "source": "/contact.html",
+      "destination": "/contact",
+      "permanent": true
+    },
+    {
+      "source": "/category/work.html",
+      "destination": "/work",
+      "permanent": true
+    },
+    {
+      "source": "/category/projects.html",
+      "destination": "/projects",
+      "permanent": true
+    },
+    {
+      "source": "/experience/:path*.html",
+      "destination": "/experience/:path*",
+      "permanent": true
+    },
+    {
+      "source": "/category/:path*.html",
+      "destination": "/category/:path*",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
@@ -14,15 +61,11 @@
           "value": "public, max-age=31536000, immutable"
         },
         {
-          "key": "Content-Encoding",
-          "value": "gzip"
-        },
-        {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
         },
         {
-          "key": "X-Frame-Options",
+          "key": "X-Frame-Options", 
           "value": "DENY"
         },
         {
@@ -32,6 +75,14 @@
         {
           "key": "Strict-Transport-Security",
           "value": "max-age=31536000; includeSubDomains"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "Permissions-Policy",
+          "value": "camera=(), microphone=(), geolocation=()"
         }
       ]
     },
@@ -53,6 +104,5 @@
         }
       ]
     }
-  ],
-  "compression": true
+  ]
 }
