Update Vercel configuration to use path parameters for CSS and JS source handling

--- a/vercel.json
+++ b/vercel.json
@@ -96,7 +96,7 @@
       ]
     },
     {
-      "source": "/(.*)\\.(?:css|js)",
+      "source": "/:path*\\.(css|js)",
       "headers": [
         {
           "key": "Cache-Control",
